Fix too big img

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,7 +98,7 @@ p {
   text-decoration: underline dashed 0.075em var(--mclaren-orange);
 }
 
-img {
+img:not(.img-small) {
   width: 100%;
   object-fit: cover;
 }
